# pg_brakes

./: .gitignore  .lycheeignore  CLAUDE.md  Cargo.toml  KNOWN_BYPASSES.md  KNOWN_DANGERS.md  README.md  deny.toml  typos.toml
.github/scripts/: coverage_floor.py
.github/workflows/: ci-extra.yml  ci.yml
crates/applyd/: Cargo.toml
crates/applyd/src/: lib.rs  main.rs  protocol.rs  service.rs
crates/applyd/tests/: applyd_it.rs
crates/audit/: Cargo.toml
crates/audit/sql/: 10_audit_meta.sql
crates/audit/src/: anchor.rs  boot.rs  kms.rs  lib.rs  pg.rs  secret.rs  sink.rs
crates/audit/tests/: anchor.rs  concurrent_append_it.rs  pg_meta_it.rs  shared_anchor.rs  single_anchor_owner_it.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: doctor_it.rs  keygen.rs  shared_meta_it.rs
crates/clone-orchestrator/: Cargo.toml
crates/clone-orchestrator/examples/: orphan_orchestrator.rs
crates/clone-orchestrator/src/: apply.rs  apply_grant.rs  conn.rs  dry_run.rs  lib.rs  predicate.rs  provider.rs  revert.rs
crates/clone-orchestrator/src/provider/: ledger.rs  local.rs
crates/clone-orchestrator/tests/: apply_grant_it.rs  apply_it.rs  clone_governance_it.rs  dry_run_it.rs  revert_it.rs
crates/clone-orchestrator/tests/common/: cluster.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: audit.rs  contract.rs  lib.rs  proxy.rs  server.rs
crates/mcp/tests/: protocol_it.rs  read_path_e2e.rs  write_path_e2e.rs
crates/pgwire/: Cargo.toml
crates/pgwire/src/: classifier.rs  lib.rs  scram.rs
crates/pgwire/tests/: classifier.rs  roundtrip.rs
crates/policy/: Cargo.toml  policy.example.yaml
crates/policy/src/: config.rs  grant.rs  intent.rs  lib.rs  risk.rs  verdict.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: auth.rs  budget.rs  config.rs  enforce.rs  explain.rs  lib.rs  main.rs  recorder.rs  session.rs  tls.rs
crates/proxy/tests/: audit_meta_it.rs  proxy_it.rs  readgates_it.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/warden/: Cargo.toml
crates/warden/src/: breaker.rs  lib.rs  main.rs  model.rs  poller.rs  thresholds.rs
crates/warden/tests/: warden_it.rs
dbsafe-bench/: Cargo.toml
dbsafe-bench/golden/: expected_outcomes.json
dbsafe-bench/src/: corpus.rs  floor.rs  lib.rs  runner.rs  verdict.rs
dbsafe-bench/tests/: gate.rs  gate_has_teeth.rs  gate_it.rs
deploy/: README.md  applyd.env.example  docker-compose.yml  down.sh  local-stack.sh  marquee.sh  marquee.transcript.txt  proxy.env.example  smoke.sh  up.sh  up.transcript.txt  warden.env.example
deploy/ci/: start-pg.sh  stop-pg.sh
deploy/hba/: pg_hba.agent-boundary.conf.template  render-hba.sh
deploy/init/: 00_README.sql  10_hardened_role.sql  20_demo_seed.sql
deploy/sql/: 10_hardened_role.sql  21_public_lockdown.sql  check-init-sync.sh
deploy/test/: local_stack_guards.sh  no_node_residuals.sh  wall_matrix.sh
docs/: README.md  architecture.md  components.md  demo.md  development.md  quickstart.md
docs/spec/: SPEC.amendments.md  SPEC.md  brief.html  brief.md  decisions.md  fidelity-spike-report.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: backend_decode.rs  classifier.rs  frontend_decode.rs
mcp/server/src/: pgProxy.ts  server.ts
mcp/server/src/testing/: fakes.ts
mcp/server/test/: integration.test.ts  tools.test.ts
proto/: README.md
spikes/fidelity/src/: lib.rs
spikes/fidelity/tests/: spike_it.rs
