[package]
name = "pgb-pgwire"
description = "pg_brakes PostgreSQL wire-protocol layer: clean-room FE/BE v3 codec (framing, startup/SCRAM auth, extended protocol), a simple-query/COPY rejection detector, and a fail-closed read-only classifier (sqlparser-rs)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "pgb_pgwire"

[dependencies]
# Async byte-level control of the FE/BE message loop (clean-room codec — no
# pgwire crate; we need explicit byte framing for enforcement). tokio "io-util"
# gives AsyncRead/AsyncWrite + read/write helpers; "macros"/"rt" for tests.
tokio = { version = "1", features = ["io-util", "macros", "rt", "net"] }
bytes = "1"
thiserror = "2"
# Apache-2.0 SQL parser for the fail-closed read-only classifier. The `visitor`
# feature (Apache-2.0 `sqlparser_derive`, already a transitive dep via the default
# `recursive-protection` feature) gives the derived AST `Visit` walk used by the
# classifier's function-call scan — it descends into EVERY expression (projection,
# WHERE/HAVING/GROUP BY/ORDER BY, JOIN ON, FILTER, subqueries, CTEs, and nested
# function arguments) so no function node can be missed (M2a #114).
sqlparser = { version = "0.62", features = ["visitor"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "rt", "rt-multi-thread"] }
